fix: respect outer visibility across Web Chat (#5473)
* fix: respect outer visibility across Web Chat

* Changelog

--- a/packages/fluent-theme/src/components/sendBox/TextArea.module.css
+++ b/packages/fluent-theme/src/components/sendBox/TextArea.module.css
@@ -14,7 +14,7 @@
 
 :global(.webchat-fluent) .sendbox__text-area--in-completion {
   .sendbox__text-area-doppelganger {
-    visibility: visible;
+    visibility: unset;
   }
 
   .sendbox__text-area-input {
